2011-10-17  Chong Yidong  <cyd@gnu.org>

	* font-lock.el (font-lock-maximum-size): Mark as obsolete.

2011-10-17  Ryan Barrett <emacs@ryanb.org>  (tiny change)

	* dirtrack.el (dirtrack): Support shell buffers with path
	prefixes, e.g. tramp-based remote shells.  (Bug#9647)

2011-10-17  Teodor Zlatanov  <tzz@lifelogs.com>

	* json.el: Bump version to 1.3 and note change in History.
	(json-alist-p, json-plist-p): Rewrite to avoid recursion.

2011-10-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* comint.el (comint-insert-input, comint-send-input)
	(comint-get-old-input-default, comint-backward-matching-input)
	(comint-next-prompt): Use nil instead of `input' for field property of
	past user input (bug#114).

	* minibuffer.el (completion--replace): Inherit surrounding properties
	(bug#114).
	(minibuffer-complete-and-exit): Use it.

	* comint.el (comint--table-subvert): Quote the all-completions output
	(bug#9160).

2011-10-17  Martin Rudalics  <rudalics@gmx.at>

	* ido.el (ido-default-buffer-method): Remove redundant :type entry.

	* menu-bar.el (menu-bar-file-menu): Add entry for making new
	window on right of selected.  (Bug#9350) Reword other window
	entries and separate them from frame entries.

2011-10-15  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/ert.el (ert--explain-equal-rec, ert-select-tests):
	Doc fixes.

2011-10-15  Chong Yidong  <cyd@stupidchicken.com>

	* net/network-stream.el (network-stream-open-starttls):
	Improve detection of failure due to lack of TLS support.

	* mail/sendmail.el (sendmail-query-once): Tweak prompt message,
	putting the input text in front and in bold.

2011-10-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcmpl-unix.el (pcomplete/ssh): SSH does allow ganging.

	* mpc.el (mpc-songs-jump-to): Don't burp if the user clicks in an
	empty buffer.

	* mouse.el (mouse-drag-mode-line-1): Modify the end-event we pushed on
	unread-command-events rather than pushing yet-another event.

2011-10-14  Eli Zaretskii  <eliz@gnu.org>
