@@ -31,7 +31,7 @@ are included.")
   (custom-theme-set-faces
    'wombat
    `(default ((,class (:background "#242424" :foreground "#f6f3e8"))))
-   `(cursor ((,class (:background "#656565" :foreground "#f6f3e8"))))
+   `(cursor ((,class (:background "#656565"))))
    ;; Highlighting faces
    `(fringe ((,class (:background "#303030"))))
    `(highlight ((,class (:background "#454545" :foreground "#ffffff"
