@@ -1,3 +1,7 @@
+2011-10-18  Chong Yidong  <cyd@gnu.org>
+
+	* faces.el (cursor): Doc fix.
+
 2011-10-17  Chong Yidong  <cyd@gnu.org>
 
 	* font-lock.el (font-lock-maximum-size): Mark as obsolete.
